背景色を設定する

--- a/app/assets/stylesheets/base/_reset.scss
+++ b/app/assets/stylesheets/base/_reset.scss
@@ -1,1 +1,22 @@
 @import "./lib/sanitize";
+
+:root, html, body {
+  background-color: $color-base;
+  color: $color-main-text;
+  width: 100%;
+}
+* {
+  box-sizing: border-box;
+}
+
+li {
+  list-style-type: none;
+}
+
+a {
+  color: $color-main-text;
+}
+a:hover {
+  text-decoration: none;
+  color: $color-link;
+}
