コンポーネントを意識してマークアップしよう

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,1 +1,14 @@
-<h1>Hello world</h1>
+<header class="Header">
+  <div class="Header__head">
+    <h1>Site Name</h1>
+    <nav class="Header__body">
+      <ul class="Menu">
+        <li class="Menu__item"><a href="#">Services</a></li>
+        <li class="Menu__item"><a href="#">Work</a></li>
+        <li class="Menu__item"><a href="#">About</a></li>
+        <li class="Menu__item"><a href="#">Blog</a></li>
+        <li class="Menu__item"><a href="#">Contact</a></li>
+      </ul>
+    </nav>
+  </div>
+</header>
