--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -12,3 +12,26 @@
     </nav>
   </div>
 </header>
+<section>
+  <div id="EntryPanel">
+    <div id="EntryPanel__sub">
+      <%= image_tag('top/entry1.jpg',class: 'EntryPanel__thumb' , width: '275' , height: '250') %>
+    </div>
+    <h3 id="EntryPanel__head">冬のコーヒーギフト</h3>
+    <div id="EntryPanel__body">
+      大切なあの方にありがとうを届けたい。心も体も温まる素敵なギフト。プレゼントキャンペーン実施中！
+    </div>
+    <div id="EntryPanel__foot"><a href="#"></a>READ MORE</div>
+  </div>
+
+  <div id="EntryPanel">
+    <div id="EntryPanel__sub">
+      <%= image_tag('top/entry2.jpg',class: 'EntryPanel__thumb' , width: '275' , height: '250') %>
+    </div>
+    <h3 id="EntryPanel__head">あの人気店コラボメニュー</h3>
+    <div id="EntryPanel__body">
+      今話題の人気店、Macaron'n Thingsのパンケーキを使ったコラボ商品のセットメニューを販売中。
+    </div>
+    <div id="EntryPanel__foot"><a href="#"></a>READ MORE</div>
+  </div>
+</section>
