Flexを利用したヘッダーのCSS

--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -1,3 +1,6 @@
 @import "./base/variables";
 @import "./base/reset";
 @import "./components/common/header";
+
+// メニュー
+@import "./components/common/menu";
