--- a/app/assets/stylesheets/components/common/_header.scss
+++ b/app/assets/stylesheets/components/common/_header.scss
@@ -1,3 +1,13 @@
-.header {
-  color: #000;
+.Header {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  height: 98px;
+  &__head {
+    flex: 1 1 auto;
+    text-align: center;
+  }
+  &__body {
+    flex: 3 1 auto
+  }
 }
