--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,37 +1,41 @@
 <header class="Header">
   <div class="Header__head">
-    <h1>Site Name</h1>
-    <nav class="Header__body">
-      <ul class="Menu">
-        <li class="Menu__item"><a href="#">Services</a></li>
-        <li class="Menu__item"><a href="#">Work</a></li>
-        <li class="Menu__item"><a href="#">About</a></li>
-        <li class="Menu__item"><a href="#">Blog</a></li>
-        <li class="Menu__item"><a href="#">Contact</a></li>
-      </ul>
-    </nav>
+    <h1 class="loglo">Site Name</h1>
   </div>
+  <nav class="Header__body">
+    <ul class="Menu">
+      <li class="Menu__item"><a href="#">Services</a></li>
+      <li class="Menu__item"><a href="#">Work</a></li>
+      <li class="Menu__item"><a href="#">About</a></li>
+      <li class="Menu__item"><a href="#">Blog</a></li>
+      <li class="Menu__item"><a href="#">Contact</a></li>
+    </ul>
+  </nav>
 </header>
 <section>
-  <div id="EntryPanel">
-    <div id="EntryPanel__sub">
+  <div class="EntryPanel">
+    <div class="EntryPanel__sub">
       <%= image_tag('top/entry1.jpg',class: 'EntryPanel__thumb' , width: '275' , height: '250') %>
     </div>
-    <h3 id="EntryPanel__head">冬のコーヒーギフト</h3>
-    <div id="EntryPanel__body">
-      大切なあの方にありがとうを届けたい。心も体も温まる素敵なギフト。プレゼントキャンペーン実施中！
+    <div id="EntryPanel__main">
+      <h3 class="EntryPanel__head">冬のコーヒーギフト</h3>
+      <div class="EntryPanel__body">
+        大切なあの方にありがとうを届けたい。心も体も温まる素敵なギフト。プレゼントキャンペーン実施中！
+      </div>
+      <div class="EntryPanel__foot"><a href="#"></a>READ MORE</div>
     </div>
-    <div id="EntryPanel__foot"><a href="#"></a>READ MORE</div>
   </div>
 
-  <div id="EntryPanel">
-    <div id="EntryPanel__sub">
+  <div class="EntryPanel">
+    <div class="EntryPanel__sub">
       <%= image_tag('top/entry2.jpg',class: 'EntryPanel__thumb' , width: '275' , height: '250') %>
     </div>
-    <h3 id="EntryPanel__head">あの人気店コラボメニュー</h3>
-    <div id="EntryPanel__body">
-      今話題の人気店、Macaron'n Thingsのパンケーキを使ったコラボ商品のセットメニューを販売中。
+    <div id="EntryPanel__main">
+      <h3 class="EntryPanel__head">あの人気店コラボメニュー</h3>
+      <div class="EntryPanel__body">
+        今話題の人気店、Macaron'n Thingsのパンケーキを使ったコラボ商品のセットメニューを販売中。
+      </div>
+      <div class="EntryPanel__foot"><a href="#"></a>READ MORE</div>
     </div>
-    <div id="EntryPanel__foot"><a href="#"></a>READ MORE</div>
   </div>
 </section>
