ボタンを作成する

--- a/app/assets/stylesheets/components/_entryPanel.scss
+++ b/app/assets/stylesheets/components/_entryPanel.scss
@@ -9,6 +9,14 @@
     flex-direction: column;
     padding: 20px 0;
   }
+  &__sub {
+    flex: 1 1 45%;
+    margin-right: 20px;
+  }
+  &__thumb {
+    width: 100%;
+    height: auto;
+  }
   &__head {
     font-weight: bold;
     font-size: 16px;
