--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -22,7 +22,7 @@
       <div class="EntryPanel__body">
         大切なあの方にありがとうを届けたい。心も体も温まる素敵なギフト。プレゼントキャンペーン実施中！
       </div>
-      <div class="EntryPanel__foot"><a href="#"></a>READ MORE</div>
+      <div class="EntryPanel__foot"><a href="#" class="button">READ MORE</a></div>
     </div>
   </div>
 
@@ -35,7 +35,7 @@
       <div class="EntryPanel__body">
         今話題の人気店、Macaron'n Thingsのパンケーキを使ったコラボ商品のセットメニューを販売中。
       </div>
-      <div class="EntryPanel__foot"><a href="#"></a>READ MORE</div>
+      <div class="EntryPanel__foot"><a href="#" class="button">READ MORE</a></div>
     </div>
   </div>
 </section>
