--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,4 +1,4 @@
-<header class="Header">
+<header class="Header l-column">
   <div class="Header__head">
     <h1 class="loglo">Site Name</h1>
   </div>
@@ -12,30 +12,32 @@
     </ul>
   </nav>
 </header>
-<section>
-  <div class="EntryPanel">
-    <div class="EntryPanel__sub">
-      <%= image_tag('top/entry1.jpg',class: 'EntryPanel__thumb' , width: '275' , height: '250') %>
-    </div>
-    <div id="EntryPanel__main">
-      <h3 class="EntryPanel__head">冬のコーヒーギフト</h3>
-      <div class="EntryPanel__body">
-        大切なあの方にありがとうを届けたい。心も体も温まる素敵なギフト。プレゼントキャンペーン実施中！
+<section class="l-column">
+  <div class="l-row">
+    <div class="EntryPanel l-halfColumn">
+      <div class="EntryPanel__sub">
+        <%= image_tag('top/entry1.jpg',class: 'EntryPanel__thumb' , width: '275' , height: '250') %>
       </div>
-      <div class="EntryPanel__foot"><a href="#" class="button">READ MORE</a></div>
+      <div id="EntryPanel__main">
+        <h3 class="EntryPanel__head">冬のコーヒーギフト</h3>
+        <div class="EntryPanel__body">
+          大切なあの方にありがとうを届けたい。心も体も温まる素敵なギフト。プレゼントキャンペーン実施中！
+        </div>
+        <div class="EntryPanel__foot"><a href="#" class="button">READ MORE</a></div>
+      </div>
     </div>
-  </div>
 
-  <div class="EntryPanel">
-    <div class="EntryPanel__sub">
-      <%= image_tag('top/entry2.jpg',class: 'EntryPanel__thumb' , width: '275' , height: '250') %>
-    </div>
-    <div id="EntryPanel__main">
-      <h3 class="EntryPanel__head">あの人気店コラボメニュー</h3>
-      <div class="EntryPanel__body">
-        今話題の人気店、Macaron'n Thingsのパンケーキを使ったコラボ商品のセットメニューを販売中。
+    <div class="EntryPanel l-halfColumn">
+      <div class="EntryPanel__sub">
+        <%= image_tag('top/entry2.jpg',class: 'EntryPanel__thumb' , width: '275' , height: '250') %>
       </div>
-      <div class="EntryPanel__foot"><a href="#" class="button">READ MORE</a></div>
+      <div id="EntryPanel__main">
+        <h3 class="EntryPanel__head">あの人気店コラボメニュー</h3>
+        <div class="EntryPanel__body">
+          今話題の人気店、Macaron'n Thingsのパンケーキを使ったコラボ商品のセットメニューを販売中。
+        </div>
+        <div class="EntryPanel__foot"><a href="#" class="button">READ MORE</a></div>
+      </div>
     </div>
   </div>
 </section>
