カルーセルを組み込むには

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,5 +12,8 @@
     <dvi id="wrapper">
       <%= yield %>
     </dvi>
+    <script>
+        imageSlide('Slide', 2);
+    </script>
   </body>
 </html>
