--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -15,3 +15,5 @@
 @import "./components/common/section";
 // ラベル
 @import "components/parts/labels";
+// オーバーレイパネル
+@import "components/overlayPanel";
