フッターの作成を始める

--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -9,17 +9,19 @@
 // ボタン
 @import "./components/parts/buttons";
 // レイアウト
-@import "components/parts/layouts";
+@import "./components/parts/layouts";
 // カルーセル
-@import "components/imageSlide";
+@import "./components/imageSlide";
 @import "./components/common/section";
 // ラベル
-@import "components/parts/labels";
+@import "./components/parts/labels";
 // オーバーレイパネル
-@import "components/overlayPanel";
+@import "./components/overlayPanel";
 // Indexページ
-@import "pages/index";
+@import "./pages/index";
 // アイコンパネル
-@import "components/iconPanel";
+@import "./components/iconPanel";
 // おしらせ一覧
 @import "./components/newsList";
+// フッター
+@import "./components/common/footer";
