--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -144,4 +144,33 @@
       </li>
     </ol>
   </section>
+
+  <footer class="Footer">
+    <div class="l-row l-column">
+      <div class="Footer__head">
+        <a href="./" class="logo">Site Name</a>
+        <ul class="Menu">
+          <li><a href="#" class="Menu__item">Services</a></li>
+          <li><a href="#" class="Menu__item">Work</a></li>
+          <li><a href="#" class="Menu__item">About us</a></li>
+          <li><a href="#" class="Menu__item">Blog</a></li>
+          <li><a href="#" class="Menu__item">Contact</a></li>
+        </ul>
+      </div>
+      <div class="Footer__body">
+        <p>Copyright information goes down here.</p>
+        <p><a href="#">Legal Notice</a></p>
+        <p><a href="#">Privacy policy</a></p>
+      </div>
+      <ul class="Footer__foot">
+        <li><a href="#">Facebook</a></li>
+        <li><a href="#">Youtube</a></li>
+        <li><a href="#">Twitter</a></li>
+        <li><a href="#">LinkedIn</a></li>
+        <li><a href="#">Flickr</a></li>
+        <li><a href="#">Instagram</a></li>
+        <li><a href="#">Yelp</a></li>
+      </ul>
+    </div>
+  </footer>
 </section>
