--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,6 +1,6 @@
 <header class="Header l-column">
   <div class="Header__head">
-    <h1 class="loglo">Site Name</h1>
+    <h1 class="logo">Site Name</h1>
   </div>
   <nav class="Header__body">
     <ul class="Menu">
