突発的な修正に上手に対応するには？

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -150,6 +150,17 @@
   </ol>
 </section>
 
+<div class="l-column">
+  <div class="l-row">
+    <a href="#" class="l-halfColumn">
+      <%= image_tag('top/top_banner_1.jpg', class:'l-fitImg', alt:'Dummy banner') %>
+    </a>
+    <a href="#" class="l-halfColumn">
+      <%= image_tag('top/top_banner_2.jpg', class:'l-fitImg', alt:'Dummy banner') %>
+    </a>
+  </div>
+</div>
+
 <footer class="Footer">
     <div class="l-row l-column">
       <div class="Footer__head">
