ユーティリティclassを作成する

--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -64,3 +64,9 @@
 // Pages
 // ===========================
 @import "./pages/index";
+
+// ===========================
+// Utils
+// ===========================
+// サイズ、余白などの便利class
+@import "./utils/arrangements";
