--- a/app/assets/stylesheets/components/_iconPanel.scss
+++ b/app/assets/stylesheets/components/_iconPanel.scss
@@ -2,14 +2,44 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  cursor: pointer;
+  @include mq-sp {
+    display: block;
+    padding: $space-unit 0;
+  }
   &__head {
     padding: $space-unit;
     font-size: 18px;
     text-align: center;
+    @include mq-sp {
+      margin-left: 52px;
+      padding: 0 0 15px;
+      text-align: left;
+      font-size: 16px;
+    }
   }
   &__body {
     max-width: 100%;
     padding: $space-unit*1.5;
     line-height: 1.5;
+    @include mq-sp {
+      margin-left: 52px;
+      padding: 0;
+      font-size: 12px;
+    }
+  }
+  //Font Awesomeでアイコンを設定する
+  &__icon {
+    margin-bottom: $space-unit;
+    padding: $space-unit/2;
+    font-size: 26px;
+    color: $color-link;
+    @include mq-sp {
+      float: left;
+      margin-bottom: 0;
+      padding-left: 0;
+      width: 52px;
+      text-align: center;
+    }
   }
 }
