--- a/app/assets/stylesheets/components/common/_footer.scss
+++ b/app/assets/stylesheets/components/common/_footer.scss
@@ -12,11 +12,17 @@
   &__head,
   &__body {
     padding-right: $space-unit;
+    @include mq-sp {
+      margin-bottom: $sp-space-unit;
+    }
   }
   &__body,
   &__foot {
     align-self: flex-start;
     flex: 1 1 25%;
+    @include mq-sp {
+      flex-basis: 100%;
+    }
   }
   a {
     color: $color-link;
