--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -65,6 +65,8 @@
 // ===========================
 @import "./pages/index";
 
+@import "./pages/campaign";
+
 // ===========================
 // Utils
 // ===========================
