フォームを作成する

--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -60,6 +60,9 @@
 // おしらせ一覧
 @import "./components/newsList";
 
+// フォーム
+@import "./components/form";
+
 // ===========================
 // Pages
 // ===========================
