--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -70,6 +70,8 @@
 
 @import "./pages/campaign";
 
+@import "./pages/article";
+
 // ===========================
 // Utils
 // ===========================
