--- a/app/assets/stylesheets/components/common/_section.scss
+++ b/app/assets/stylesheets/components/common/_section.scss
@@ -1,3 +1,11 @@
+@charset 'utf-8';
+
+// =====================
+// Section
+// ---------------------
+// ページの節
+// =====================
+
 .Section {
   margin-bottom: $space-unit*2;
   &__item {
