--- a/app/assets/stylesheets/pages/_article.scss
+++ b/app/assets/stylesheets/pages/_article.scss
@@ -1,4 +1,10 @@
-//記事全体の構成
+@charset 'utf-8';
+
+// =====================
+// 記事ページ固有のスタイル
+// =====================
+
+// 記事全体の構成
 .Article {
   &__text {
     margin-bottom: $space-unit*2;
@@ -10,7 +16,7 @@
   }
 }
 
-//リスト
+// リスト
 .textList {
   margin-bottom: $space-unit*2;
   margin-left: $space-unit*2;
@@ -19,7 +25,7 @@
   }
 }
 
-//サムネイル付きのアイテム
+// サムネイル付きのアイテム
 .ThumbnailItem {
   display: flex;
   align-items: center;
