--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -1,3 +1,5 @@
+@charset 'utf-8';
+
 // ===========================
 // Base
 // ===========================
@@ -9,7 +11,7 @@
 @import "./base/mixins";
 @import "./base/reset";
 
-//font-awesome
+// font-awesome
 @import "font-awesome";
 // ===========================
 // Components
