リファクタリング（コメント追加）

--- a/app/assets/stylesheets/pages/_index.scss
+++ b/app/assets/stylesheets/pages/_index.scss
@@ -1,12 +1,19 @@
+@charset 'utf-8';
+
+// =====================
+// トップページ固有のスタイル
+// =====================
+
 .IndexPage {
   &__foodMenu,
   &__drinkMenu {
-    background-repeat: no-repeat;
+    display: flex;
     background-position: center center;
     background-size: cover;
+    background-repeat: no-repeat;
   }
   &__drinkMenu {
-    background-image: image_url('top/menu_drink.jpg')
+    background-image: image_url('top/menu_drink.jpg');
   }
   &__foodMenu {
     background-image: image_url('top/menu_food.jpg');
