--- a/app/assets/stylesheets/pages/_campaign.scss
+++ b/app/assets/stylesheets/pages/_campaign.scss
@@ -1,8 +1,14 @@
+@charset 'utf-8';
+
+// =====================
+// キャンペーンページ固有のスタイル
+// =====================
+
 .Campaign {
   &__sweets {
     display: block;
     padding: 10% $space-unit;
-    background-image: image_url('campaign/sweets.jpg'),linear-gradient(to right, #e4e8ea 0%,#e4e8ea 47%,#f6f8f7 80%,#f6f8f7 100%);
+    background-image: image_url('campaign/sweets.jpg'), linear-gradient(to right,  #e4e8ea 0%,#e4e8ea  47%,#f6f8f7 80%,#f6f8f7 100%);
     background-position: right bottom;
     background-size: cover;
     background-repeat: no-repeat;
@@ -11,21 +17,24 @@
       padding: $space-unit*2;
       background-size: contain;
     }
+
     &__main {
       display: flex;
-      flex-direction: column;
       align-items: center;
+      flex-direction: column;
       width: 66%;
       @include mq-sp {
         width: 100%;
       }
     }
+
     &__head {
       margin-bottom: $space-unit*2;
       text-transform: uppercase;
       font-weight: normal;
       font-size: 22px;
     }
+
     &__body {
       margin-bottom: $space-unit;
       font-size: 14px;
@@ -33,6 +42,7 @@
         font-size: 12px;
       }
     }
+
     &__button {
       padding: 8px 16px;
       border: 1px solid $color-link;
