リファクタリング（キャンペーンページへのリンク追加）

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -52,7 +52,7 @@
         <div class="EntryPanel__body">
           大切なあの方にありがとうを届けたい。心も体も温まる素敵なギフト。プレゼントキャンペーン実施中！
         </div>
-        <div class="EntryPanel__foot"><a href="#" class="button">READ MORE</a></div>
+        <div class="EntryPanel__foot"><%= link_to('READ MORE',campaign_index_url,class:"button") %></div>
       </div>
     </div>
 
@@ -65,7 +65,7 @@
         <div class="EntryPanel__body">
           今話題の人気店、Macaron'n Thingsのパンケーキを使ったコラボ商品のセットメニューを販売中。
         </div>
-        <div class="EntryPanel__foot"><a href="#" class="button">READ MORE</a></div>
+        <div class="EntryPanel__foot"><%= link_to('READ MORE',campaign_index_url,class:"button") %></div>
       </div>
     </div>
   </div>
