--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,9 @@
   <body>
     <div id="wrapper" class="SpMenu__wrapper">
       <div id="overlay" class="SpMenu__overlay"></div>
+      <%= render 'shared/header' %>
       <%= yield %>
+      <%= render 'shared/footer' %>
     </div>
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
